--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,71 @@
+body {
+  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/169/528/original/pexels-tima-miroshnichenko-5725589.jpg?1751526794");
+  background-size: cover;
+  font-family: sans-serif;
+}
+
 h1 {
   text-align: center;
 }
 
+h2 {
+  margin: 0 0 10px;
+}
+
+.container {
+  max-width: 600px;
+  margin: 120px auto;
+  background-color: white;
+  padding: 30px;
+  box-shadow: 10px 5px 5px black;
+  border-radius: 7px;
+  opacity: 0.75;
+}
+
+.city {
+  display: flex;
+  margin: 20px 0;
+  justify-content: space-between;
+  padding: 20px 0;
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
+}
+
+.city:last-child {
+  border: none;
+}
+
+.date {
+  opacity: 0.5;
+  font-size: 13px;
+}
+
+.time {
+  font-family: "Orbitron", sans-serif;
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.time small {
+  font-size: 15px;
+  line-height: 36px;
+  vertical-align: middle;
+  font-family: "Orbitron", sans-serif;
+}
+
+select {
+  display: block;
+  width: 100%;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 18px;
+}
+
+a {
+  color: palevioletred;
+}
+
 footer {
   text-align: center;
+  color: pink;
+  font-size: 12px;
 }
