--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,16 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/169/528/original/pexels-tima-miroshnichenko-5725589.jpg?1751526794");
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* Optional: adds a subtle parallax effect */
   font-family: sans-serif;
 }
 
@@ -28,6 +38,7 @@ h2 {
   justify-content: space-between;
   padding: 20px 0;
   border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
+  padding-left: 20px;
 }
 
 .city:last-child {
@@ -41,8 +52,9 @@ h2 {
 
 .time {
   font-family: "Orbitron", sans-serif;
-  font-size: 36px;
+  font-size: 25px;
   font-weight: bold;
+  margin-right: 20px;
 }
 
 .time small {
